# ratifact

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  justfile
src/ui/: app.rs  popup.rs
