[package]
name = "ratifact"
version = "0.1.15"
edition = "2024"

[dependencies]
chrono = "0.4.42"
dotenvy = "0.15.7"
notify = "8.2.0"
ratatui = "0.29.0"
rust_decimal = "1.39.0"
serde = { version = "1.0", features = ["derive"] }
sqlx = { version = "0.8.6", features = ["runtime-tokio", "postgres", "chrono", "rust_decimal"] }
tokio = { version = "1.48.0", features = ["full"] }
toml = "0.8"
walkdir = "2.5.0"

[dev-dependencies]
tempfile = "3.23.0"
